deployment/artifacts/project-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-devops
  namespace: ${KUBERNETES_NAMESPACE}
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /greetings/actions/hello/Manuel
        pathType: Prefix
        backend:
          service:
            name: svc-devops-project
            port:
              number: 8090
